--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,11 @@
+@use "bootstrap/scss/bootstrap" as *;
+@use "bootstrap-icons/font/bootstrap-icons.css";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 :root {
-  --primary: #0d6efd;   // azul Bootstrap
-  --success: #198754;
-  --warning: #ffc107;
-  --danger: #dc3545;
-
-  --bg-main: #f5f7fb;
+  --primary: #2563eb;  // mejor azul moderno
+  --bg-main: #eef3f9;  // fondo más parecido al diseño
   --bg-card: #ffffff;
-
   --text-main: #1f2937;
   --text-muted: #6b7280;
 }
@@ -27,7 +24,7 @@ h1 { font-size: 2rem; }      // 32px
 h2 { font-size: 1.5rem; }    // 24px
 h3 { font-size: 1.25rem; }   // 20px
 h4 { font-size: 1.125rem; }  // 18px
-p  { font-size: 1rem; }      // 16px
+p  { font-size: 1rem; margin: 0; padding: 0;}      // 16px
 small { font-size: 0.875rem; } // 14px
 
 body {
@@ -42,4 +39,74 @@ body {
 .card {
   border-radius: 0.75rem;
   padding: 1rem;
+}
+a{
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+
+}
+
+// tamaños de logos ---------------------------
+.img_logo{
+  max-width: 200px;
+  height: auto;
+}
+@media(max-width: 500px){
+  .img_logo{
+  max-width: 150px;
+  height: auto;
+}
+}
+// --------------------------------------
+
+// estilos botones
+.btn_enviar{
+  color: white;
+  background-color:#2563eb;
+  padding-inline: 24px;
+  padding-block: 12px;
+  border-radius: 35px;
+  font-size: 1rem;
+  border: none;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+  display: block;
+  margin-inline: auto;
+  max-width: 200px;
+  width: 100%;
+  margin-block: .5rem;
+}
+.btn_enviar:hover {
+  background-color: #1d4ed8; /* Un azul un poco más oscuro (Blue 700) */
+  box-shadow: 0 10px 15px -3px rgba(37, 99, 235, 0.4); /* Sombra azulada y más grande */
+  transform: translateY(-2px); /* El efecto de que "flota" hacia arriba */
+}
+
+.btn_enviar:active {
+  transform: translateY(0); /* Al hacer click, vuelve a su posición original */
+}
+.btn_logear_con{
+  display: flex;
+  color: black;
+  background-color:white;
+  padding-inline: 24px;
+  padding-block: 12px;
+  border-radius: 35px;
+  font-size: 1rem;
+  border: 1px solid black;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+  display: block;
+  margin-inline: auto;
+  margin-block: .5rem;
+}
+.btn_logear_con:hover {
+  background-color: rgba(255, 255, 255, 0.877); /* Un azul un poco más oscuro (Blue 700) */
+  box-shadow: 0 10px 15px -3px rgba(37, 99, 235, 0.4); /* Sombra azulada y más grande */
+  transform: translateY(-2px); /* El efecto de que "flota" hacia arriba */
+}
+
+.btn_logear_con:active {
+  transform: translateY(0); /* Al hacer click, vuelve a su posición original */
 }
